add lists items api methods
